[package]
name = "manycastr"
version = "1.2.1"
edition = "2021"

[dependencies]
byteorder = "1.5.0"# convert between byte arrays and integers
chrono = "0.4.42"# get current time
clap = "4.5.54"# parse command line arguments
csv = "1.4.0" # write to CSV
futures-core = "0.3.31" # async runtime
prettytable-rs = "0.10.0" # print worker-list
prost = "0.14.1" # define gRPC messages
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "time"] } # async runtime
tonic = { version = "0.14.2", features = ["tls-ring", "zstd"] } # gRPC (inter-component communication)
rand = "0.10.0-rc.6" # generate random numbers
gethostname = "1.1.0" # get hostname
pnet = "0.35.0"# create raw socket for sending/receiving packets
local-ip-address = "0.6.8" # get local unicast address
mac_address = "1.1.8" # get MAC address
indicatif = "0.18.3" # progress bar
ratelimit_meter = "5.0.0" # rate limit
flate2 = "1.1.5" # compression
bimap = "0.6.3"
tonic-prost = "0.14.2"
parquet = { version = "57.1.0", features = ["snap"]}
serde_json = "1.0.149"
log = "0.4.29"
pretty_env_logger = "0.5.0"

[build-dependencies]
tonic-prost-build = "0.14.2"
